<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.vilyever.howtocustomlayoutmanager.MainActivity">
    <item android:id="@+id/action_add"
        android:title="@string/action_add"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_remove"
        android:title="@string/action_remove"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_empty"
        android:title="@string/action_empty"
        android:orderInCategory="90"
        app:showAsAction="never" />
    <item android:id="@+id/action_small"
        android:title="@string/action_small"
        android:orderInCategory="91"
        app:showAsAction="never" />
    <item android:id="@+id/action_medium"
        android:title="@string/action_medium"
        android:orderInCategory="92"
        app:showAsAction="never" />
    <item android:id="@+id/action_large"
        android:title="@string/action_large"
        android:orderInCategory="93"
        app:showAsAction="never" />

    <item android:id="@+id/action_scroll_to_position"
        android:title="@string/action_scroll_position"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_smooth_to_position"
        android:title="@string/action_smooth_position"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
